tests/eval/exp/good/list_foldl_nth.scilexp
(* Expected result: -3 *)

let zero = Int32 0 in
let one = Int32 1 in
let two = Int32 2 in
let three = Int32 3 in

(* [3,1,2,3] *)
let nil = Nil {Int32} in
let l1 = Cons {Int32} three nil in
let l2 = Cons {Int32} two l1 in
let l3 = Cons {Int32} one l2 in
let l4 = Cons {Int32} three l3 in

let subtract = fun (a : Int32) => fun (b : Int32) => builtin sub a b in

let foldl_nth = @list_foldl_nth Int32 Int32 in

let u_one = Uint32 1 in

foldl_nth u_one subtract zero l4
